@@ -5,7 +5,10 @@ leJOS 1.0.0alpha3:
   - Fixed a linker bug: it was dumping a stack trace if
     one of the zip/jar entries in the classpath wasn't found.
     This bug was reported by E. Harshbarger.
-  
+  - lejosc and lejosp will work with Java 2 compilers only.
+    For JDK 1.1, use lejosc1 and lejosp1. The problem was
+    that java.util.Random couldn't be used with Java 2.
+    It was reported by J. Knudsen.
   
 leJOS 1.0.0alpha2:
 ------------------
